added new images and text

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
-    /* font-family: 'Qwigley', cursive; */
-    font-family: 'Tillana', cursive;
+    font-family: 'Qwigley', cursive;
 }
 
 .parallax {
