--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
-/* Global css */
+Global css
+/* css starts here */
 
 body {
     margin: 0;
@@ -18,6 +19,69 @@ a {
     margin: 0;
     padding: 0;
     text-decoration: none;
+}
+
+#overlay {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(7, 15, 59);
+    opacity: 1;
+    z-index: 1001;
+    display: none;
+}
+
+.typewriter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.typewriter h3 {
+    color: #fff;
+    font-family: "Courier";
+    font-size: 24px;
+    font-weight: 900;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    animation: typing 8s steps(30, end), blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+
+@keyframes blink-caret {
+    from,
+    to {
+        border-color: transparent
+    }
+    50% {
+        border-color: black
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .typewriter h3 {
+        font-size: 16px;
+    }
 }
 
 /* parallax effect css */
@@ -233,7 +297,7 @@ footer {
 }
 
 @keyframes anim {
-   0%{
+    0% {
         opacity: 0;
     }
     100% {
