--- a/css/custom.css
+++ b/css/custom.css
@@ -236,65 +236,17 @@ footer {
     left: 0%;
     width: 100%;
     height: 100vh;
-    background-color: #0c9;
+    background-color: #fff;
     opacity: 1;
     z-index: 1001;
     display: none;
 }
 
-.typewriter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.typewriter h3 {
-    color: #000;
-    font-family: "Courier";
-    font-size: 24px;
-    font-weight: 900;
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0 auto;
-    animation: typing 8s steps(30, end), blink-caret .5s step-end infinite;
-}
-
-/* The typing effect */
-
-@keyframes typing {
-    from {
-        width: 0
-    }
-    to {
-        width: 100%
-    }
-}
-
-/* The typewriter cursor effect */
-
-@keyframes blink-caret {
-    from,
-    to {
-        border-color: transparent
-    }
-    50% {
-        border-color: #fff;
-    }
-}
-
 @media screen and (max-width: 768px) {
-    .typewriter h3 {
-        font-size: 16px;
-    }
     .overlay .closebtn {
         top: 0%;
         right: 8%;
-      }
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -305,5 +257,70 @@ footer {
     .links a,
     .info {
         font-size: 15px;
+    }
+}
+
+.splashscreen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+}
+
+.space {
+    margin-left: 10px;
+}
+
+.line1 {
+    width: 10px;
+    height: 100vh;
+    background: #000;
+    position: relative;
+    -webkit-animation: myfirst 75s 2;
+    /* Safari 4.0 - 8.0 */
+    -webkit-animation-direction: alternate;
+    /* Safari 4.0 - 8.0 */
+    animation: myfirst 58s ;
+    animation-direction: alternate;
+}
+
+.line2 {
+    width: 10px;
+    margin-left: 10px;
+    height: 100vh;
+    background: #000;
+    position: relative;
+    -webkit-animation: myfirst 75s ;
+    /* Safari 4.0 - 8.0 */
+    -webkit-animation-direction: alternate;
+    /* Safari 4.0 - 8.0 */
+    animation: myfirst2 58s ;
+    animation-direction: alternate;
+}
+@keyframes myfirst {
+    0% {
+        background: #000;
+        left: 0px;
+        top: 0px;
+    }
+    100% {
+        background: #000;
+        left: 0px;
+        top: 1000px;
+    }
+}
+
+@keyframes myfirst2 {
+    0% {
+        background: #000;
+        left: 0px;
+        bottom: 0px;
+    }
+    100% {
+        background: #000;
+        left: 0px;
+        bottom: 1000px;
     }
 }
