--- a/css/custom.css
+++ b/css/custom.css
@@ -13,28 +13,28 @@
 
 .line1 {
     width: 10px;
-    height: 100vh;
+    height: 95vh;
     background: #000;
     position: relative;
     -webkit-animation: myfirst 75s 2;
     /* Safari 4.0 - 8.0 */
     -webkit-animation-direction: alternate;
     /* Safari 4.0 - 8.0 */
-    animation: myfirst 58s;
+    animation: myfirst 48s;
     animation-direction: alternate;
 }
 
 .line2 {
     width: 10px;
     margin-left: 10px;
-    height: 100vh;
+    height: 95vh;
     background: #000;
     position: relative;
     -webkit-animation: myfirst 75s;
     /* Safari 4.0 - 8.0 */
     -webkit-animation-direction: alternate;
     /* Safari 4.0 - 8.0 */
-    animation: myfirst2 58s;
+    animation: myfirst2 48s;
     animation-direction: alternate;
 }
 
@@ -113,80 +113,13 @@ body {
     background-image: url('../img/bucket.jpg');
 }
 
-/* menu css */
-
-.menu-logo {
-    width: 60px;
-    height: 60px;
-}
-
-.menu {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 10;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    background-color: transparent;
-}
-
-/* overlay css */
-
-.overlay {
-    height: 100%;
-    font-family: sans-serif;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: -20px;
-    background-color: #fff;
-    background-image: linear-gradient(90deg, transparent 79px, #fff 79px, #fff 81px, transparent 81px), linear-gradient(#eee .1em, transparent .1em);
-    background-size: 100% 1.2em;
-    overflow-x: hidden;
-    transition: 0.6s;
-    margin-right: 20px;
-}
-
-.overlay-content {
-    top: 50%;
-    position: relative;
-    left: 50%;
-    width: 100%;
+header h2{
+   margin: 0;
+   font-size: 40px;
     text-align: center;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-}
-
-.overlay-content li {
-    list-style: none;
-    margin: 0;
-    font-size: 24px;
-}
-
-.overlay .closebtn {
-    position: absolute;
-    top: 10%;
-    right: 40%;
-    text-decoration: none;
-    color: #999;
-    font-size: 40px;
-}
-
-.btn {
-    border: 2px solid black;
-    background-color: black;
-    padding: 10px 15px;
+    font-family: fantasy;
+    background: brown;
     color: #fff;
-    width: 200px;
-    text-transform: uppercase;
-    margin: 5px auto;
-}
-
-.btn:hover {
-    background-color: #fff;
-    color: #000;
 }
 
 /* content css  */
@@ -196,10 +129,8 @@ body {
     color: #000;
     letter-spacing: 1.2px;
     background-color: #fff;
-    font-size: 44px;
-    text-shadow: 0 2px 1px rgba(0, 0, 0, 0.7);
-    box-shadow: 2px 2px 2px #000;
-    padding: 10px;
+    font-size: 34px;
+  
     font-family: 'Qwigley', cursive;
 }
 
@@ -308,14 +239,7 @@ footer {
     display: none;
 }
 
-@media screen and (max-width: 768px) {
-    .overlay .closebtn {
-        top: 0%;
-        right: 8%;
-    }
-}
-
-@media screen and (max-width: 500px) {
+<header><h2>gallery Storybox</h2><h6 class="subtitle">sudhir kumar</h6></header>@media screen and (max-width: 500px) {
     .quotes .container,
     .bucketlist .container {
         margin: 0;
