--- a/css/custom.css
+++ b/css/custom.css
@@ -113,26 +113,31 @@ body {
     background-image: url('../img/bucket.jpg');
 }
 
-header h2{
-   margin: 0;
-   font-size: 40px;
+header h2 {
+    margin: 0;
+    padding: 20px 0;
+    font-size: 40px;
     text-align: center;
-    font-family: fantasy;
     background: brown;
     color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* content css  */
 
 .content {
     text-align: center;
-    color: #000;
+    color: #000000;
     letter-spacing: 1.2px;
-    background-color: #fff;
     font-size: 34px;
-  
     font-family: 'Qwigley', cursive;
 }
+
+.content h3 {
+    padding: 20px;
+    margin: 0;
+}
+
 
 footer {
     padding: 30px;
